@@ -599,19 +599,7 @@ class ProfileStorage:
 
         self.needs_saving = True
         
-    def get_extract_src_path (self, path, revision = None):
-        """Return the src path of a file or directory for extraction from the profile.
-
-        @path: the relative path of the file or directory to extract.
-        This is the same path used with ProfileStorage::add().
-        @revision: an (optional) revision identifier which specifies
-        the revision of the file or directory which should be extracted.
-        The revision identifier must have been returned from
-        ProfileStorage::get_revisions() and may be a profile or file
-        revision.
-        """
-        extract_src_path = item_type = item_revison = None
-        
+    def __get_item_type_and_revision (self, path, revision):
         self.__unpack ()
 
         if not revision:
@@ -639,20 +627,31 @@ class ProfileStorage:
                 item_type     = item.prop ("type")
                 item_revision = item.prop ("revision")
 
-        if self.__item_revision_is_current (path, item_type, item_revision):
-            if item_type == "directory":
-                extract_src_path = os.path.join (self.temp_path, path)
-            else:
-                extract_src_path = os.path.join (self.temp_path, path)
-        else:
-            if item_type == "directory":
-                extract_src_path = os.path.join (self.revisions_path, path)
-            else:
-                extract_src_path = os.path.join (self.revisions_path, path, item_revision)
+        return (item_type,
+                item_revision,
+                self.__item_revision_is_current (path, item_type, item_revision))
+        
+    def get_extract_src_path (self, path, revision = None):
+        """Return the src path of a file or directory for extraction from the profile.
 
-        extract_src_path = os.path.normpath(extract_src_path)
+        @path: the relative path of the file or directory to extract.
+        This is the same path used with ProfileStorage::add().
+        @revision: an (optional) revision identifier which specifies
+        the revision of the file or directory which should be extracted.
+        The revision identifier must have been returned from
+        ProfileStorage::get_revisions() and may be a profile or file
+        revision.
+        """
+        (item_type, item_revision, is_current) = self.__get_item_type_and_revision (path, revision)
+        
+        if is_current:
+            extract_src_path = os.path.join (self.temp_path, path)
+        else:
+            extract_src_path = os.path.join (self.revisions_path, path, item_revision)
+
         dprint ("Extract src path for '%s', revision %s is '%s'", path, revision, extract_src_path)
-        return extract_src_path
+        
+        return os.path.normpath (extract_src_path)
 
     def extract (self, path, dst_dir, overwrite = False, revision = None):
         """Extract a file or directory from the profile.
@@ -668,21 +667,29 @@ class ProfileStorage:
         ProfileStorage::get_revisions() and may be a profile or file
         revision.
         """
-        dprint ("Extracting '%s' to '%s', revision %s", path, dst_dir, revision)
+        dprint ("Extracting '%s' to '%s', revision %s" % (path, dst_dir, revision))
         
-        path = os.path.normpath(path)
-        extract_src_path = self.get_extract_src_path(path, revision)
+        (item_type, item_revision, is_current) = self.__get_item_type_and_revision (path, revision)
 
-        if os.path.isdir(extract_src_path):
-            (root, subdir) = util.split_path(extract_src_path, tail=path)
-            copy_tree (dst_dir, root, subdir, None, overwrite)
+        if item_type == "directory":
+            if is_current:
+                copy_tree (dst_dir, self.temp_path, path, None, overwrite)
+            else:
+                copy_tree (dst_dir,
+                           os.path.join (self.revisions_path, path),
+                           path,
+                           item_revision,
+                           overwrite)
         else:
             dst_path = os.path.join (dst_dir, path)
             if overwrite or not os.path.exists (dst_path):
                 dirname = os.path.dirname (dst_path)
                 if not os.path.exists (dirname):
                     os.makedirs (dirname)
-                shutil.copy2 (extract_src_path, dst_path)
+                if is_current:
+                    shutil.copy2 (os.path.join (self.temp_path, path), dst_path)
+                else:
+                    shutil.copy2 (os.path.join (self.revisions_path, path, item_revision), dst_path)
 
     def list (self, source = None, profile_revision = None):
         """List the current contents of the profile.
