@@ -1,3 +1,7 @@
+2005-06-21  John Dennis  <jdennis@redhat.com>
+
+	* apply Mark's patch for get_extract_src_path()
+
 2005-06-21  Mark McLoughlin  <markmc@redhat.com>
 
 	* admin-tool/sessionwindow.py: use gtk.UIManager()
